--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
       var typed = new Typed(".auto-input", {
-        strings: ["Chunduri Jaswanth", "Web Developer", "Web Scrapper"],
+        strings: ["", "Chunduri Jaswanth", "Web Developer", "Web Scrapper"],
         typeSpeed: 100,
         backSpeed: 100,
         loop: true,
