changed to px to rem

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
           <li><a href="/">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="">Blog</a></li>
         </ul>
       </nav>
       <div class="about">
@@ -24,7 +24,7 @@
           <img src="images/works.jpeg" alt="" />
         </div>
         <div class="about-info">
-          <h3 style="color: #fff724">MY SKILLS</h3>
+          <h3 style="color: #fff724">ABOUT ME</h3>
           <p class="about-p1">
             I code in a variety of languages spanning desktop and web. I'm also
             an ideas guy that has seen great success in development hackathons
@@ -34,6 +34,7 @@
             of skills.
           </p>
           <p class="about-p2">
+            <h3 style="color: #fff724">My Skills</h3>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
             atque laborum, minus inventore necessitatibus dignissimos quia
             corrupti quasi debitis voluptates culpa non dolore voluptatem illo,
