--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
           <li><a href="/">Home</a></li>
           <li><a href="/about.html">About</a></li>
           <li><a href="/portfolio.html">Portfolio</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="">Blog</a></li>
         </ul>
         <img src="images/menu.png" class="menu-icon" alt="" />
       </nav>
       <div class="text-box">
         <h1>I'm <span class="auto-input"> </span></h1>
         <p>You can reach out to me if you need any help</p>
-        <a href="">Contact me</a>
-        <a href="Resume.pdf" class="btn">Download CV </a>
+        <a href="https://twitter.com/Jaswanth73" target="_blank"
+          >Get in Touch</a
+        >
+        <a href="resume.pdf" class="btn" target="_blank">Download CV </a>
       </div>
       <div class="img">
         <img src="images/ProfilePic.jpg" class="user-img" />
