--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
           <li><a href="/">Home</a></li>
           <li><a href="/about.html">About</a></li>
           <li><a href="/portfolio.html">Portfolio</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="">Blog</a></li>
         </ul>
       </nav>
       <div class="port-list">
