--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Chunduri Jaswanth</title>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css" />
   </head>
   <body>
     <div class="header">
