--- a/portfolio.html
+++ b/portfolio.html
@@ -5,31 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chunduri Jaswanth</title>
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div class="header">
       <nav>
         <h1 class="logo"><a href="/">Jaswanth</a></h1>
         <h2 class="dot">.</h2>
+        <input type="checkbox" id="check" />
+        <label for="check" class="checkbtn">
+          <i class="fas fa-bars"></i>
+        </label>
+
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/about.html">About</a></li>
           <li><a href="/portfolio.html">Portfolio</a></li>
           <li><a href="">Blog</a></li>
         </ul>
+        <img src="images/menu.png" class="menu-icon" alt="" />
       </nav>
       <div class="port-list">
-        <h2 class="port-list-heading">Project List:</h2>
-        <div class="port-listing">
-          <div class="port 1">
-            <h2>TRADING BOT WITH SENTIMENT ANALYSIS</h2>
-          </div>
-          <div class="port 2">
-            <h2>DESKTOP ASSISTANT WITH PYTHON</h2>
+        <h2 class="port-list-heading">Project List :</h2>
+        <div class="card" style="width: 18rem">
+          <img
+            src="images/bookrecom.jpg"
+            class="card-img-top"
+            alt="this image is not visible due to some reason"
+          />
+          <div class="card-body" style="color: black">
+            <h5 class="card-title">Book recommendation</h5>
+            <p class="card-text">
+              Developed a book recommendation system which uses the
+              collaborative system to recommed the books.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div>
       </div>
     </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
+    <script src=""></script>
   </body>
 </html>
