--- a/blogs.html
+++ b/blogs.html
@@ -37,39 +37,6 @@
         </ul>
         <img src="images/menu.png" class="menu-icon" alt="" />
       </nav>
-      <div id="portlist" class="port-list">
-        <h2 class="port-list-heading">Project List :</h2>
-        <div
-          class="card"
-          id="border"
-          style="width: 18rem; border: 3px solid grey; margin-top: 25px"
-        >
-          <img
-            src="images/bookrecom.jpg"
-            class="card-img-top"
-            alt="this image is not visible due to some reason"
-          />
-          <div class="card-body" style="color: black">
-            <h5 class="card-title">Book recommendation</h5>
-            <p class="card-text">
-              Developed a book recommendation system which uses the
-              collaborative system to recommed the books.
-            </p>
-            <a
-              href="https://github.com/jaswanth187/book_recommendation"
-              class="btn btn-primary"
-              target="_blank"
-              >Github Repo</a
-            >
-          </div>
-        </div>
-      </div>
-    </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"
-    ></script>
-    <script src="portscript.js"></script>
-  </body>
-</html>
+      <h2>!Sorry, there weren't blogs posted...</h2>
+    </body>
+    </html>
