--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li><a href="/">Home</a></li>
           <li><a href="/about.html">About</a></li>
           <li><a href="/portfolio.html">Portfolio</a></li>
-          <li><a href="">Blog</a></li>
+          <li><a href="/blogs.html">Blog</a></li>
         </ul>
         <img src="images/menu.png" class="menu-icon" alt="" />
       </nav>
