--- a/about.html
+++ b/about.html
@@ -45,7 +45,21 @@
             Learning and Artificial Intelligence. See my resume for a full list
             of skills.
           </p>
+        <div class="skills">
           <h3 style="color: #fff724">My Skills</h3>
+          <li>
+            <h3>HTML5</h3><span class="bar"><span class="html"></span></span>
+          </li>
+          <li>
+            <h3>CSS3</h3><span class="bar"><span class="css"></span></span>
+          </li>
+          <li>
+            <h3>JavaScript</h3><span class="bar"><span class="javascript"></span></span>
+          </li>
+          <li>
+            <h3>Python</h3><span class="bar"><span class="python"></span></span>
+          </li>
+        </div>
         </div>
       </div>
     </div>
