--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chunduri Jaswanth</title>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="responsive.css" />
+    <link rel="stylesheet" href="style\style.css" />
+    <link rel="stylesheet" href="style\responsive.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -45,21 +45,25 @@
             Learning and Artificial Intelligence. See my resume for a full list
             of skills.
           </p>
-        <div class="skills">
-          <h3 style="color: #fff724">My Skills</h3>
-          <li>
-            <h3>HTML5</h3><span class="bar"><span class="html"></span></span>
-          </li>
-          <li>
-            <h3>CSS3</h3><span class="bar"><span class="css"></span></span>
-          </li>
-          <li>
-            <h3>JavaScript</h3><span class="bar"><span class="javascript"></span></span>
-          </li>
-          <li>
-            <h3>Python</h3><span class="bar"><span class="python"></span></span>
-          </li>
-        </div>
+          <div class="skills">
+            <h3 style="color: #fff724">My Skills</h3>
+            <li>
+              <h3>HTML5</h3>
+              <span class="bar"><span class="html"></span></span>
+            </li>
+            <li>
+              <h3>CSS3</h3>
+              <span class="bar"><span class="css"></span></span>
+            </li>
+            <li>
+              <h3>JavaScript</h3>
+              <span class="bar"><span class="javascript"></span></span>
+            </li>
+            <li>
+              <h3>Python</h3>
+              <span class="bar"><span class="python"></span></span>
+            </li>
+          </div>
         </div>
       </div>
     </div>
