--- a/blogs.html
+++ b/blogs.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chunduri Jaswanth</title>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="responsive.css" />
+    <link rel="stylesheet" href="style\style.css" />
+    <link rel="stylesheet" href="style\responsive.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -37,6 +37,6 @@
         </ul>
         <img src="images/menu.png" class="menu-icon" alt="" />
       </nav>
-      <h2>!Sorry, there weren't blogs posted...</h2>
+      <h2>Sorry, there weren't any blogs posted...</h2>
     </body>
     </html>
