--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chunduri Jaswanth</title>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="responsive.css" />
+    <link rel="stylesheet" href="style\style.css" />
+    <link rel="stylesheet" href="style\responsive.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -31,6 +31,7 @@
         </ul>
         <img src="images/menu.png" class="menu-icon" alt="" />
       </nav>
+      <div class="inline">
       <div class="text-box">
         <h1 id="head">I'm <span class="auto-input"> </span></h1>
         <p>You can reach out to me if you need any help</p>
@@ -43,6 +44,7 @@
         <img src="images/ProfilePic.jpg" class="user-img" />
       </div>
     </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
       var typed = new Typed(".auto-input", {
@@ -52,6 +54,6 @@
         loop: true,
       });
     </script>
-    <script src="script.js"></script>
+    <script src="scripts\script.js"></script>
   </body>
 </html>
